JS(transparent home)

--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
 
 		<!-- Home -->
 		<section id="home">
-			<img src="imgs/내사진.jpg" alt="My Avatar Photo" class="home__avatar" />
-			<h1 class="home__title">Hello, <br />I'm Hong Seung Hee</h1>
-			<h2 class="home__description">
-				I'm studying hard to become a full-stack developer across Front-end and
-				Back-end.
-			</h2>
-			<button class="home__contact" data-link="#contact">CONTACT ME</button>
+			<div class="home__container">
+				<img src="imgs/내사진.jpg" alt="My Avatar Photo" class="home__avatar" />
+				<h1 class="home__title">Hello, <br />I'm Hong Seung Hee</h1>
+				<h2 class="home__description">
+					I'm studying hard to become a full-stack developer across Front-end
+					and Back-end.
+				</h2>
+				<button class="home__contact" data-link="#contact">CONTACT ME</button>
+			</div>
 		</section>
 
 		<!-- About -->
