--- a/index.html
+++ b/index.html
@@ -383,5 +383,10 @@
 				2020 Hong Seung Hee - Let's be good developers
 			</p>
 		</section>
+
+		<!-- Arrow up -->
+		<button class="arrowUp">
+			<i class="fas fa-arrow-up"></i>
+		</button>
 	</body>
 </html>
