JS(Project- filtering)

--- a/index.html
+++ b/index.html
@@ -215,16 +215,16 @@
 				<h1>My Work</h1>
 				<h3>Projects</h3>
 				<div class="work__categories">
-					<button class="category__btn active">
+					<button class="category__btn active" data-filter="*">
 						All <span class="category__count">6</span>
 					</button>
-					<button class="category__btn">
+					<button class="category__btn" data-filter="google">
 						Google <span class="category__count">2</span>
 					</button>
-					<button class="category__btn">
+					<button class="category__btn" data-filter="youtube">
 						Youtube <span class="category__count">2</span>
 					</button>
-					<button class="category__btn">
+					<button class="category__btn" data-filter="online-shop">
 						Online-Shop <span class="category__count">2</span>
 					</button>
 				</div>
@@ -234,6 +234,7 @@
 						href="https://github.com/sejong77/Google-Clone-Coding"
 						class="project"
 						target="blank"
+						data-type="google"
 					>
 						<img
 							src="imgs/Project img/Google(Desktop).png"
@@ -249,6 +250,7 @@
 						href="https://github.com/sejong77/Google-Clone-Coding"
 						class="project"
 						target="blank"
+						data-type="google"
 					>
 						<img
 							src="imgs/Project img/Google(mobile).png"
@@ -264,6 +266,7 @@
 						href="https://github.com/sejong77/Youtube-Clone-Coding"
 						class="project"
 						target="blank"
+						data-type="youtube"
 					>
 						<img
 							src="imgs/Project img/Youtube(Desktop).png"
@@ -279,6 +282,7 @@
 						href="https://github.com/sejong77/Youtube-Clone-Coding"
 						class="project"
 						target="blank"
+						data-type="youtube"
 					>
 						<img
 							src="imgs/Project img/Youtube(mobile).png"
@@ -294,6 +298,7 @@
 						href="https://github.com/sejong77/Online-Shopping"
 						class="project"
 						target="blank"
+						data-type="online-shop"
 					>
 						<img
 							src="imgs/Project img/Online-Shop(Desktop).png"
@@ -309,6 +314,7 @@
 						href="https://github.com/sejong77/Online-Shopping"
 						class="project"
 						target="blank"
+						data-type="online-shop"
 					>
 						<img
 							src="imgs/Project img/Online-Shop(mobile).png"
