--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				<h1>My Work</h1>
 				<h3>Projects</h3>
 				<div class="work__categories">
-					<button class="category__btn active" data-filter="*">
+					<button class="category__btn selected" data-filter="*">
 						All <span class="category__count">6</span>
 					</button>
 					<button class="category__btn" data-filter="google">
