--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav id="navbar">
 			<div class="navbar__logo">
 				<i class="fab fa-accusoft"></i>
-				<a href="#">Hong</a>
+				<a href="https://sejong77.github.io/portfolio">Hong</a>
 			</div>
 			<ul class="navbar__menu">
 				<li class="navbar__menu__item" data-link="#home">Home</li>
